# BidirectionalGaitNet

./: CMakeLists.txt  build.sh  install.sh
python/: advanced_vae.py  augument_raw_data.py  checkpoint_converter.py  converter_to_gvae_set.py  forward_gaitnet.py  ray_model.py  ray_train.py  train_backward_gaitnet.py  train_forward_gaitnet.py
